--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                first-order-logic
+name:                FOL-proof-checker
 version:             0.1.0.0
-github:              "githubuser/first-order-logic"
+github:              "githubuser/FOL-proof-checker"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -16,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/first-order-logic#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/FOL-proof-checker#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -29,7 +29,7 @@ library:
   source-dirs: src
 
 executables:
-  first-order-logic-exe:
+  FOL-proof-checker-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -37,10 +37,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - first-order-logic
+    - FOL-proof-checker
 
 tests:
-  first-order-logic-test:
+  FOL-proof-checker-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -48,4 +48,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - first-order-logic
+    - FOL-proof-checker
