--- a/FOL-proof-checker.cabal
+++ b/FOL-proof-checker.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a0a56f5aaf8bd0f92aa42d22b50db74c73caec584346f0a35f9d9cbcb8d106fb
+-- hash: 197f2997791454dc0d0a8a619091d5fd88ff76f86c2f6f910ee209f64f40e22f
 
 name:           FOL-proof-checker
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       Theory.Logical
       Theory.PA
       Theory.ZF
+      Z3Proof
   other-modules:
       Paths_FOL_proof_checker
   hs-source-dirs:
@@ -47,6 +48,7 @@ library
     , containers
     , hspec
     , parsec
+    , z3 >=408.1
   default-language: Haskell2010
 
 executable FOL-proof-checker-exe
@@ -63,6 +65,7 @@ executable FOL-proof-checker-exe
     , containers
     , hspec
     , parsec
+    , z3 >=408.1
   default-language: Haskell2010
 
 test-suite FOL-proof-checker-test
@@ -74,6 +77,7 @@ test-suite FOL-proof-checker-test
       ParserSpec
       ProofSpec
       TestUtils
+      Z3ProofSpec
       Paths_FOL_proof_checker
   hs-source-dirs:
       test
@@ -85,4 +89,5 @@ test-suite FOL-proof-checker-test
     , containers
     , hspec
     , parsec
+    , z3 >=408.1
   default-language: Haskell2010
